2003-09-23  Thomas Koeller  <thomas.koeller@baslerweb.com>

        * src/fs-ecos.c: Fixed broken hard link creation.
	
2003-09-23  Andrew Lunn     <andrew.lunn@ascom.ch>

	* src/fs-ecos.c: Minor optimization of previous patch.
	
2003-09-21  Thomas Koeller  <thomas.koeller@baslerweb.com>
	    Andrew Lunn     <andrew.lunn@ascom.ch>

	* src/fs-ecos.c: Do not decrement mount count for unsuccessful
	umount attempts.

2003-09-19  Thomas Koeller  <thomas.koeller@baslerweb.com>

	* src/fs-ecos.c: Another inode number fix.

2003-09-18  Thomas Koeller  <thomas.koeller@baslerweb.com>

	* src/fs-ecos.c: Inode number returned by stat() was bogus.

2003-07-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/os-ecos.h: Added new #defines require for the recent jffs2
	import.

2003-07-27  Michael Checky  <Michael_Checky@ThermoKing.com>
 
 	* src/fs-ecos.c: Changed the return error code to be negative as
	expected by jffs2_flash_read() and jffs2_flash_write().
	
2003-04-23  Bob Koninckx  <bob.koninckx@mech.kuleuven.ac.be>

	* src/fs-ecos.c: mtab -> cyg_mtab. Ditto cyg_mtab_end. 

2003-03-25  Thomas Koeller  <thomas.koeller@baslerweb.com>

	* src/fs-ecos.c
        Fixed segmentation fault when unmounting file system.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/jffs2.cdl: Fix doc link.

2003-02-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/jffs2.cdl: Remove unused flash geometry CDL options.

2003-02-04  Gary Thomas  <gary@mlbassoc.com> on behalf of
2003-02-04  David Woodhouse <dwmw2@cambridge.redhat.com>	

	* src/write.c: 
	* src/scan.c: 
	* src/readinode.c: 
	* src/read.c: 
	* src/pushpull.h: 
	* src/os-ecos.h: 
	* src/nodemgmt.c: 
	* src/nodelist.h: 
	* src/nodelist.c: 
	* src/malloc-ecos.c: 
	* src/jffs2port.h: 
	* src/gc.c: 
	* src/file-ecos.c: 
	* src/erase.c: 
	* src/dir-ecos.c: 
	* src/compr_zlib.c: 
	* src/compr_rubin.c: 
	* src/compr_rtime.c: 
	* src/compr.c: 
	* src/build.c: 
	* cdl/jffs2.cdl: Update to latest public JFFS2 codebase.

	* src/list.h: 